# dialectTest

./: .gitignore  CMakeLists.txt  README.md
input/: input.mlir
mlirInputParser/: CMakeLists.txt  parserInput.cpp
src/: CMakeLists.txt  dialectTest.cpp
